--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
-    "helmet": "^8.1.0"
+    "helmet": "^8.1.0",
+    "mongoose": "^8.16.4"
   }
 }
